--- a/public/about.html
+++ b/public/about.html
@@ -1,20 +1,33 @@
 <h1>About Me</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sem tellus, sagittis non odio nec, interdum
-  elementum lacus. Ut ac justo eget risus sollicitudin fringilla sed ut leo. Ut condimentum elit nec fermentum lobortis.
-  Quisque tincidunt quam nec tincidunt ullamcorper. Integer vitae pretium justo. In placerat volutpat pellentesque.
-  Etiam
-  gravida quam vitae odio pulvinar imperdiet. Vivamus venenatis gravida purus sit amet aliquet. Ut in nibh sed quam
-  laoreet lacinia. Cras cursus ut dui vitae posuere. Vivamus volutpat urna vitae odio fringilla placerat. Nulla vel
-  rhoncus sapien. Phasellus at interdum enim.</p>
+<img src="../assets/images/About me.JPG" width="400"/>
+<hr/>
+<p>I am Clara, a novice in the field of programming. 
+  I hold a deep appreciation for programming due to its inherent capacity for continuous learning and evolution. 
+  Originally hailing from Taiwan, I currently reside in Vancouver, Canada, where I find immense joy in the abundant natural landscapes, 
+  characterized by picturesque mountains and serene lakes.
+</p>
 
-<p>Curabitur elementum sagittis mollis. In porta nec quam ut semper. Nulla volutpat neque quis lacus mattis eleifend.
-  Phasellus et congue odio. Mauris tristique, nisl quis porttitor porttitor, tortor ante mattis ex, at dictum tortor
-  dolor
-  ut sem. Nullam nec libero non ex porta vulputate a eu sapien. In nec bibendum mauris. Fusce iaculis lectus vel magna
-  laoreet gravida.</p>
+<p>  In my leisure moments, I find solace in various activities, such as:
+  <ul>
+    <li>Summer</li>
+     <ol>
+      <li>Swimming</li>
+      <li>Camping</li>
+      <li>Off roading</li>
+      <li>Traveling</li>
+     </ol>
+    <li>Winter</li>
+     <ol>
+      <li>Snowboarding</li>
+      <li>Snowshoeing</li>
+      <li>Reading</li>
+      <li>Sleeping</li>
+     </ol>
+  </ul>
 
-<p>Donec euismod vestibulum arcu, a blandit metus mattis ultrices. Integer quis hendrerit justo. Maecenas sed tempor mi.
-  Fusce egestas urna leo. Mauris viverra sem sed libero egestas, volutpat aliquet magna porta. Quisque id diam sed ipsum
-  interdum sollicitudin id quis augue. Donec congue nisl nec massa ornare imperdiet quis quis odio. Etiam ut volutpat
-  nisl. Vestibulum hendrerit justo nibh, eget consequat magna fermentum finibus. Pellentesque et urna fringilla, rutrum
-  neque in, varius leo. Vestibulum efficitur id massa eget pellentesque.</p>
+  These pastimes not only enrich my life but also contribute to my personal growth and well-being.</p>
+
+<p>I have a five-year-old Corgi. 
+  Her endearing nature makes her, in my opinion, the most adorable canine companion in the world. 
+  Together, we embark on exciting adventures and engage in the delightful pursuit of camping, 
+  creating cherished memories in the great outdoors.</p>
