--- a/public/movie-ranking.html
+++ b/public/movie-ranking.html
@@ -1,9 +1,10 @@
-<h1>The Best Movies According to Angela</h1>
-<h2>My top 3 movies of all-time.</h2>
+<h1>The Best Movies According to Clara</h1>
+<h2>My favorite 3 movies.</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h2>1. Begin Again</h2>
+<p>I really like musical movie. And the story in this movie is simple and beatiful.</p>
+<h2>2. Warriors of the Rainbow: Seediq Bale</h2>
+<p>This movis is very intense. You won't fell asleep at all.</p>
+<h2>3. Barbie</h2>
+<P>It a very happy and coloful movie.</P>
+<hr />
