--- a/index.html
+++ b/index.html
@@ -13,3 +13,28 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Clara Kuo's Protfolio</title>
+    </head>
+    <body>
+        <h1>Clara Kuo's Protfolio</h1></body>
+        <h2>I am a beginner in web development</h2>
+        <hr/>
+        <h3><a href="./public/movie-ranking.html"><b>Movie Ranking project</b></a></h3>
+        <img src="./assets/images/movie-ranking.png" alt="Movies ranking project" height=300"/>
+
+        <h3><a href="./public/birthday-invite.html"><b>Birthday Invite project</b></a></h3>
+        <img src="./assets/images/birthday-invite.png" alt="birthday invite project" height="650">
+        
+        <hr/>
+        <a href="./public/contact.html">Contact me</a>
+        <a href="./public/about.html">About me</a>
+    </body>
+
+
+</html>
