--- a/public/birthday-invite.html
+++ b/public/birthday-invite.html
@@ -1,18 +1,15 @@
 <!-- This is one possible solution -->
-<h1>It's My Birthday!</h1>
-<h2>On the 12th May</h2>
-
-<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg"
-  alt="purple birthday cake with candles" />
-
+<h1>My birthday is coming!!</h1>
+<h2>On the 24th May at 6:00pm</h2>
+<hr />
+<img src="https://thumbs.dreamstime.com/z/happy-birthday-dog-singing-jack-russell-as-surprise-song-behind-funny-cake-wearing-red-tie-party-hat-isolated-white-54087338.jpg?w=450"/>
+<hr />
 <h3>What to bring:</h3>
 <ul>
-  <li>Baloons (I love baloons)</li>
-  <li>Cake (I'm really good at eating)</li>
-  <li>An appetite (There will be lots of food)</li>
+    <li>Colorful Baloons (My favorite)</li>
+    <li>Beer (Time for cheers)</li>
+    <li>An appetite (There will be lots of food)</li>
+    <li>Happy mode (Ready for the party)</li>
 </ul>
-
-<h3>This is where you need to go:</h3>
-<a
-  href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google
-  map link</a>
+<h3>Let's meet here:</h3>
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
